TCOTA-1006 refactor participant handling performance
Batches participant refresh/lookup against the LMS course roster instead of
loading everything into memory at once (LmsUserBatch + paginated repository
queries), broadens the participant-group refresh trigger to also cover
consented-but-ungrouped and dropped participants, and carries forward the
various backend bug fixes and dead-code cleanup that landed alongside this
work: cookieless LTI 1.3 launch support, Canvas submission recipient matching,
several store-layer error-handling fixes, and the caliper-java dependency now
resolving from a proper local Maven repository instead of a systemPath hack.

Supersedes the original draft commit on this branch, which predated several
of development's own participant-handling fixes and had deleted
ParticipantServiceImplTest.java without a replacement.